# LDSP

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  android-versions.mk  check_dependencies_inclusion.cmake  check_pd_scope.cmake  ldsp_settings.conf
core/: CMakeLists.txt  LDSP.cpp  Midi.cpp  WSServer.cpp  WebServer.cpp  audioDeviceInfo.cpp  commandLineArgs.cpp  ctrlInputs.cpp  ctrlOutputs.cpp  default_render_pd.cpp  hwConfig.cpp  main.cpp  mixer.cpp  outDevices.cpp  priority_utils.cpp  render.cpp  sensors.cpp  thread_utils.cpp  tinyAlsaExtension.cpp  tinyalsaAudio.cpp
dependencies/: CMakeLists.txt
dependencies/RapidLib/: CMakeLists.txt
dependencies/RapidLib/src/: knnClassification.cpp  neuralNetwork.cpp
dependencies/fftw3/: FFTW3LibraryDepends.cmake  FFTW3fConfig.cmake  config.h  fftw3f.pc
dependencies/glob/: CMakeLists.txt  freeBSD_compatability.h  glob.c  glob.h
dependencies/math-neon/: CMakeLists.txt
dependencies/math-neon/src/: math_acosf.c  math_asinf.c  math_atan2f.c  math_atanf.c  math_ceilf.c  math_cosf.c  math_coshf.c  math_expf.c  math_fabsf.c  math_floorf.c  math_fmodf.c  math_invsqrtf.c  math_ldexpf.c  math_log10f.c  math_logf.c  math_modf.c  math_neon.h  math_powf.c  math_sinf.c  math_sinhf.c  math_sqrtf.c  math_tanf.c  math_tanhf.c
dependencies/math-neon/tools/: gas2android_convert.py
dependencies/ne10/: CMakeLists.txt
dependencies/ne10/modules/: CMakeLists.txt
dependencies/ne10/samples/: NE10_samples.c
dependencies/onnxruntime/: CMakeLists.txt
dependencies/onnxruntime/armv7a/: libonnxruntime.pc
dependencies/seasocks/: CMakeLists.txt  SeasocksConfig.cmake  SeasocksConfigVersion.cmake
dependencies/seasocks/internal/: Config.h
dependencies/seasocks/src/main/c/: Connection.cpp  HybiPacketDecoder.cpp  Server.cpp
dependencies/seasocks/src/main/c/seasocks/: IgnoringLogger.h  Server.h  WebSocket.h
dependencies/seasocks/src/main/c/seasocks/win32/: win_byteswap.h
dependencies/seasocks/src/main/web/: CMakeLists.txt  Embedded.cpp
dependencies/serial/: CMakeLists.txt
dependencies/serial/src/impl/: unix.cc
dependencies/serial/src/impl/list_ports/: list_ports_linux.cc
dependencies/tinyalsa/: CMakeLists.txt  pcm.c
dependencies/tinyalsa/include/tinyalsa/: asoundlib.h
docs/: 0_introduction.md  1_dependencies.md  2_installation.md  3_phone_config.md  4_usage.md
examples/Audio/delay_stereo/: render.cpp
examples/Audio/fft_boilerplate/: render.cpp
examples/Audio/sample_player/: render.cpp
examples/Audio/telephone_filter/: render.cpp
examples/Audio/wavetable_oscillator/: render.cpp
examples/Backlight Sine/: render.cpp
examples/Communication/MIDI/: render.cpp
examples/Communication/OSC/: render.cpp
examples/Communication/mySerialArduino/: MyArduino.cpp  MyArduino.h  render.cpp
examples/Communication/serialArduino/: render.cpp
examples/DedoGranular/: render.cpp
examples/Extras/drum_delay/: render.cpp
examples/Extras/fft_robotize/: render.cpp
examples/Extras/fft_vibrate/: MonoFilePlayer.h  render.cpp
examples/Fundamentals/minimal/: render.cpp
examples/Fundamentals/scope/: render.cpp
examples/Fundamentals/scope_input/: render.cpp
examples/Fundamentals/sine/: render.cpp
examples/Gui/gui_to_ldsp/: render.cpp  sketch.js
examples/Gui/ldsp_to_gui/: render.cpp  sketch.js
examples/Gui/sliders/: render.cpp
examples/InputOutput/buttons/: render.cpp
examples/InputOutput/control_outputs/: render.cpp
examples/LDSPowl_delay/: render.cpp
examples/LatencyTester/: render.cpp
examples/MagSniffer/: render.cpp
examples/Magnet with OSC/: render.cpp
examples/Passthrough/: render.cpp
examples/Sine/: render.cpp
examples/drum_delay/: render.cpp
examples/fft_passthrough/: render.cpp
examples/fft_vibrate/: render.cpp
examples/generative/: _main.pd
examples/midi_test/: Midi.h  render.cpp
examples/osc_bank/: main.cpp  oscBank.cpp  render.cpp  wavetable.h
examples/pd_control_input/: _main.pd
examples/pd_control_out/: _main.pd
examples/pd_custom_render/: _main.pd  render.cpp
examples/pd_multitouch/: _main.pd
examples/pd_sensors/: _main.pd
examples/sandbox/: render.cpp
examples/test_fft/: render.cpp
include/: BelaUtilities.h  LDSP.h  Midi.h  WSServer.h  WebServer.h  audioDeviceInfo.h  commandLineArgs.h  ctrlInputs.h  ctrlOutputs.h  enums.h  hwConfig.h  mixer.h  outDevices.h  priority_utils.h  sensors.h  thread_utils.h  tinyAsound.h  tinyalsaAudio.h
libraries/: CMakeLists.txt
libraries/Arduino/: Arduino.cpp  Arduino.h
libraries/AudioFile/: AudioFile.h  AudioFileUtilities.cpp
libraries/Bela/Biquad/: Biquad.cpp
libraries/Biquad/: Biquad.cpp  Biquad.h
libraries/FFT/: fft.cpp  fft.h
libraries/Fft/: Fft.cpp  Fft.h
libraries/Granular/: Granular.cpp  Granular.h
libraries/Gui/: Gui.cpp  Gui.h
libraries/GuiController/: GuiController.cpp  GuiController.h  GuiSlider.cpp  GuiSlider.h
libraries/JSON/: c_cpp_properties.json
libraries/LinInterpolator/: LinInterpolator.h
libraries/OrtModel/: OrtModel.cpp  OrtModel.h
libraries/OscReceiver/: OscReceiver.cpp  OscReceiver.h
libraries/OscSender/: OscSender.cpp  OscSender.h
libraries/Oscillator/: Oscillator.cpp
libraries/Scope/: Scope.cpp  Scope.h
libraries/UdpClient/: UdpClient.h
libraries/WSServer/: WSServer.cpp  WSServer.h
libraries/WebServer/: WebServer.cpp  WebServer.h
libraries/tinyalsa/: mixer.c  pcm.c
libraries/tinyalsa/include/tinyalsa/: asoundlib.h
phones/_template/: ldsp_hw_config.json
resources/gui/: LDSP.js  LDSPData.js  LDSPWebSocket.js  gui-template.html  index.html
resources/scope/: index.html
scripts/: ldsp.bat  ldsp.sh  ldsp_active_audioDevices.sh  ldsp_androidVersion.sh  ldsp_architecture.sh  ldsp_audioDevices.sh  ldsp_configure.sh  ldsp_convert_android_version.sh  ldsp_debugserver_stop.sh  ldsp_export_onnx.sh  ldsp_helper_printMixerPaths.sh  ldsp_install_fromSD.sh  ldsp_midiDetect.sh  ldsp_midiDevices.sh  ldsp_mixerFind.sh  ldsp_mixerPaths.sh  ldsp_mixerPaths_opened.sh  ldsp_mixerPaths_recursive.sh  ldsp_phoneDetails.sh  ldsp_stop.sh  read_config.py
(+118 files in other folders)
